# N-Pace

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  SRS_AdjustedPace.md  compose.yaml  pyproject.toml
docs/: PLAN-v0.1.md
docs/adr/: 0001-pace-penalty-domain-with-mechanical-physiological-split.md  0002-reference-conditions.md  0003-fit-export-primary-coros-mcp-secondary.md  0004-pin-weather-model-for-reproducibility.md  0005-wind-reported-but-excluded-from-np-v1.md  0006-calibrate-by-np-variance-minimization.md  0007-grade-sensitivity-damping.md  0008-fetch-activities-from-intervals-icu.md  0009-single-user-now-multi-user-ready-seams.md  0010-wbgt-heat-model.md  0011-strava-writeback-annotations.md  0012-provisional-weather-tier.md  0013-watch-poll-not-push.md
docs/agents/: domain.md  triage-labels.md
docs/research/: activity-api-ingestion.md  calibration-findings-2026-07.md  grade-adjusted-pace.md  strava-writeback.md  wbgt-heat-model.md
src/pacelab/: __main__.py  account.py  analyze.py  app.py  (+8 more)
tests/: test_account.py  test_air_density.py  test_analyze.py  test_annotation.py  test_app.py  test_calibrate.py  test_combine.py  test_enrich.py  test_gpx.py  test_grade.py  test_heat.py  test_heat_wbgt.py  test_intervals_description.py  test_intervals_download.py  test_intervals_list.py  test_normalize.py  test_preprocess_pipeline.py  test_publish.py  test_segment.py  test_segment_cost.py  test_smoothing.py  test_store.py  test_sync.py  test_trend.py  test_watch.py  test_wbgt.py  test_weather_cache.py  test_weather_interp.py  test_wind.py
(+24 files in other folders)
