[project]
name = "pacelab"
version = "0.1.0"
description = "Environment-Adjusted Pace Engine — Normalized Pace from grade, heat, and wind"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
