[project]
name = "pacelab"
version = "0.1.0"
description = "Environment-Adjusted Pace Engine — Normalized Pace from grade, heat, and wind"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.6.17",
    "fitdecode>=0.11.0",
]

[project.scripts]
pacelab = "pacelab.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
